<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schoolunch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="image">image</string>
    <string name="btn_buy">购买</string>
    <string name="tv_tag">食不厌精,脍不厌细</string>
    <string name="btn_cancel">退订</string>
    <string name="shop_list">我的食堂</string>
    <string name="my_orders">我的订单</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_logout">切换用户</string>
    <string name="help_view">帮助</string>
    <string name="my_quit">退出</string>
    <string name="new_versioin">最新版本</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="tv_username">用户名</string>
    <string name="tv_password">密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_regis">注册</string>
    <string name="btn_beginscan">扫描</string>
    <string name="btn_send">配送</string>
    <string name="btn_update">刷新</string>
    <string name="btn_enter">开始体验</string>
    <string name="help_info">Schoolunch是牵机工作室专门为大连理工大学软件学院开发的一款订餐软件。\n
该软件订餐采用货到付款形式，并采用提前预订集中配送的模式，希望大家能够谅解\n
\n
使用说明：\n
1.点开“我的食堂”，选择喜欢的餐馆，并选择自己喜欢的食物下单。\n
2.下单完成后，可在"我的订单"中查看和退订订单。但是请注意，只能在下单后5分钟内才能取消订单。\n
3.点击订单，会弹出订单的二维码，用于在取餐时确认订单。\n
4.订餐时间为\n    
早上9：00 - 11：00 ，送餐时间11：35\n
下午15：00 - 16：20 ，送餐时间16：55\n
​5.取餐地点为：三舍楼下小门外。</string>
    
    
	<string name="test_description">暂无描述</string>
	<string name="test_name">盖浇饭</string>
	<string name="test_price">10元 已预订：36份</string>
	<string name="test_username">土老灶</string>
	<string name="test_produce_type">特色饭类</string>
	<string name="test_produce_type_count">[5]</string>
	<string name="test_order_info">店铺: 土老灶  预订时间: 10：32</string>
	<string name="test_shop_orders">预订：36份 </string>
	<string name="test_shop_orders_count">今日累计：50份 本月累计：323份</string>
</resources>
