<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <Button 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:id="@+id/btn_shop_beginscan"
    	android:text="@string/btn_beginscan"
    	android:layout_alignParentLeft="true"
        />
    <Button 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:id="@+id/btn_shop_update"
    	android:text="@string/btn_update"
    	android:layout_centerHorizontal="true"
        />
    <Button 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:id="@+id/btn_shop_send"
    	android:text="@string/btn_send"
    	android:layout_alignParentRight="true"
        />
    
	<ExpandableListView 
	    android:layout_below="@id/btn_shop_beginscan"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/shop_produce_list"
        android:descendantFocusability="blocksDescendants"
		android:focusableInTouchMode="true"
		android:focusable="true"
		android:cacheColorHint="#00000000"
		android:divider="#C7C7C7"
		android:dividerHeight="6dip"
		android:layout_alignParentEnd="true"
		android:background="#ffffff"
		android:layout_marginLeft="6dip"
		android:layout_marginRight="6dip"
		android:layout_marginTop="6dip"
	    >
	    
	</ExpandableListView>
</RelativeLayout>
