<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drawer_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/drawer_user_bg"
        android:orientation="horizontal"
        >



        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/test_username"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:id="@+id/tv_user_name"
                />
            </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/drawer_bg"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/shop_list"
                android:onClick="OnClickListeners"
                android:tag="Main"
                android:id="@+id/drawer_button_shoplist"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/my_collection"
                android:onClick="OnClickListeners"
                android:tag="RecentEvents"
                android:id="@+id/drawer_button_mycollection"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/my_orders"
                android:onClick="OnClickListeners"
                android:id="@+id/drawer_button_orderlist"
                />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    />
            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/help_view"
                android:onClick="OnClickListeners"
                android:id="@+id/drawer_button_help"
                />
           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="?android:attr/listDivider"
               />
            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/new_versioin"
                android:onClick="OnClickListeners"
                android:id="@+id/drawer_button_newversion"
                />
           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="?android:attr/listDivider"
               />
           <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/my_logout"
                android:onClick="OnClickListeners"
                android:id="@+id/drawer_button_logout"
                />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    />
           <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/my_quit"
                android:onClick="OnClickListeners"
                android:id="@+id/drawer_button_quit"
                />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    />
        </LinearLayout>
    </ScrollView>

</LinearLayout>