<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout 
        android:id="@+id/adapter_title"
        android:layout_width="match_parent"
        android:layout_height="72dip"
        android:background="#FFFFFF"
        >
        <ImageView 
		    android:id="@+id/img_produce_icon"
		    android:layout_width="50dip"
			android:layout_height="50dip"
			android:layout_alignParentLeft="true"
			android:src="@drawable/ic_launcher"
			android:contentDescription="@string/image"
			android:layout_centerInParent="true"
			android:layout_marginLeft="5dip"
	    />
        <Button 
            android:id="@+id/btn_buy"
            android:layout_width="60dip"
            android:layout_height="25dip"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="#00ac00"
            android:layout_marginRight="6dip"
            android:text="@string/btn_buy"
            android:textSize="@dimen/text_size_15dp"
            android:textColor="#ffffff"
        />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="72dip"
            android:layout_toEndOf="@id/img_produce_icon"
			android:layout_toStartOf="@id/btn_buy"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="left|center"
            >
            <TextView 
                android:id="@+id/tv_produce_name"
                android:layout_width="wrap_content"
            	android:layout_height="48dip"
            	android:text="@string/test_name"
            	android:textSize="@dimen/text_size_18dp"
            	android:layout_marginLeft="10dip"
            	android:gravity="center"
                />
            <TextView 
                android:id="@+id/tv_produce_info"
                android:layout_width="wrap_content"
            	android:layout_height="24dip"
            	android:text="@string/test_price"
            	android:textSize="@dimen/text_size_15dp"
            	android:layout_marginLeft="10dip"
                />
        </LinearLayout>
        
    </RelativeLayout>
 	<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/adapter_title"
        android:background="?android:attr/listDivider"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >
        </View>
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_below="@id/adapter_title"
        >
        <TextView 
        	android:id="@+id/tv_introduce"
	        android:layout_centerInParent="true"
	        android:layout_width="match_parent"
	        android:layout_height="30dip"
	        android:layout_margin="5dip"
	        android:maxLines="2"
	        android:minLines="2"
	      	android:gravity="center"
	        android:text="@string/test_description"
	        android:textSize="@dimen/text_size_12dp"
	        android:ellipsize="end"
            />
    </RelativeLayout>
</RelativeLayout>
