<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dip"
    android:background="#ffffff"
         >
       	<ImageView 
		    android:id="@+id/img_shop_icon"
		    android:layout_width="50dip"
			android:layout_height="50dip"
			android:layout_alignParentLeft="true"
			android:src="@drawable/ic_launcher"
			android:contentDescription="@string/image"
			android:layout_centerInParent="true"
			android:layout_marginLeft="5dip"
	    />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="72dip"
            android:layout_toEndOf="@id/img_shop_icon"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="left|center"
            >
            <TextView 
	        	android:id="@+id/tv_shop_name"
		        android:layout_width="wrap_content"
		        android:layout_height="32dip"
		        android:layout_marginLeft="10dip"
		      	android:gravity="center"
		        android:text="@string/test_name"
		        android:textSize="@dimen/text_size_20dp"
            />
            <TextView 
                android:id="@+id/tv_shop_info"
                android:layout_width="wrap_content"
            	android:layout_height="24dip"
            	android:text="@string/test_price"
            	android:textSize="@dimen/text_size_15dp"
            	android:layout_marginLeft="10dip"
            	android:textColor="#000000"
            	android:gravity="center"
                />
        </LinearLayout>

</RelativeLayout>
